--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -132,6 +132,7 @@ a:active {
 
 .section-footer {
     padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -195,15 +196,15 @@ ul.row {
     text-align: right;
 }
 
-.footer-address{
+.footer-address {
     color: var(--text-color);
 }
 
-.social-link{
+.social-link {
     display: block;
 }
 
-.social-link > svg{
+.social-link>svg {
     fill: var(--text-color);
 }
 
